# ChangeLog for perl-core/File-Spec
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/perl-core/File-Spec/ChangeLog,v 1.54 2008/10/31 08:16:20 tove Exp $

*File-Spec-3.29 (31 Oct 2008)
*File-Spec-3.27.01 (31 Oct 2008)

  31 Oct 2008; Torsten Veller <tove@gentoo.org> +File-Spec-3.27.01.ebuild,
  +File-Spec-3.29.ebuild, -File-Spec-3.2701.ebuild:
  Version bump. Renamed 3.2701 to 3.27.01

  15 Jul 2008; Raúl Porcel <armin76@gentoo.org> File-Spec-3.2701.ebuild:
  alpha/ia64/sparc/x86 stable

*File-Spec-3.2701 (29 Apr 2008)

  29 Apr 2008; Yuval Yaari <yuval@gentoo.org> +File-Spec-3.2701.ebuild:
  Version bump

  28 Mar 2008; Jeroen Roovers <jer@gentoo.org> File-Spec-3.25.ebuild:
  Stable for HPPA too.

  19 Nov 2007; Joshua Kinard <kumba@gentoo.org> File-Spec-3.25.ebuild:
  Stable on mips.

  10 Nov 2007; Samuli Suominen <drac@gentoo.org> File-Spec-3.25.ebuild:
  amd64 stable

  12 Aug 2007; Tom Gall <tgall@gentoo.org> File-Spec-3.25.ebuild:
  stable on ppc64

  09 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  File-Spec-3.25.ebuild:
  Stable on ppc.

  27 Jul 2007; Raúl Porcel <armin76@gentoo.org> File-Spec-3.25.ebuild:
  alpha/ia64/x86 stable

  16 Jul 2007; Michael Cummings <mcummings@gentoo.org>
  File-Spec-3.25.ebuild:
  sparc stable

*File-Spec-3.25 (13 Jun 2007)

  13 Jun 2007; Michael Cummings <mcummings@gentoo.org>
  +File-Spec-3.25.ebuild:
  Version bump

  04 Jun 2007; Jeroen Roovers <jer@gentoo.org> File-Spec-3.24.ebuild:
  Stable for HPPA too.

  11 May 2007; Joshua Kinard <kumba@gentoo.org> File-Spec-3.24.ebuild:
  Stable on mips.

  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  File-Spec-3.24.ebuild:
  ppc stable

  15 Apr 2007; Markus Rothe <corsair@gentoo.org> File-Spec-3.24.ebuild:
  Stable on ppc64

  03 Mar 2007; Andrej Kacian <ticho@gentoo.org> File-Spec-3.24.ebuild:
  Stable on x86, bug #169153.

  03 Mar 2007; Michael Cummings <mcummings@gentoo.org>
  File-Spec-3.24.ebuild: