@@ -1,6 +1,6 @@
-# Copyright 1999-2007 Gentoo Foundation
+# Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/perl-core/File-Spec/File-Spec-3.24.ebuild,v 1.10 2007/06/04 02:47:35 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/perl-core/File-Spec/File-Spec-3.24.ebuild,v 1.11 2008/11/18 14:18:11 tove Exp $
 
 inherit perl-module
 
@@ -16,9 +16,9 @@ KEYWORDS="alpha amd64 arm hppa ia64 m68k mips ppc ppc64 s390 sh sparc x86 ~x86-f
 IUSE=""
 
 RDEPEND="dev-lang/perl
-	dev-perl/ExtUtils-CBuilder"
+	virtual/perl-ExtUtils-CBuilder"
 DEPEND="${RDEPEND}
-	dev-perl/module-build"
+	virtual/perl-Module-Build"
 
 S=${WORKDIR}/${MY_P}
 
