@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/perl-core/File-Spec/File-Spec-3.25.ebuild,v 1.9 2008/03/28 06:41:14 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/perl-core/File-Spec/File-Spec-3.25.ebuild,v 1.10 2008/11/18 14:18:11 tove Exp $
 
 inherit perl-module
 
@@ -17,9 +17,9 @@ IUSE=""
 SRC_TEST="do"
 
 RDEPEND="dev-lang/perl
-	dev-perl/ExtUtils-CBuilder"
+	virtual/perl-ExtUtils-CBuilder"
 DEPEND="${RDEPEND}
-	dev-perl/module-build"
+	virtual/perl-Module-Build"
 
 S=${WORKDIR}/${MY_P}
 
