@@ -1,6 +1,11 @@
 # ChangeLog for perl-core/File-Spec
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/perl-core/File-Spec/ChangeLog,v 1.54 2008/10/31 08:16:20 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/perl-core/File-Spec/ChangeLog,v 1.55 2008/11/18 14:18:11 tove Exp $
+
+  18 Nov 2008; Torsten Veller <tove@gentoo.org> File-Spec-3.12.ebuild,
+  File-Spec-3.15.ebuild, File-Spec-3.24.ebuild, File-Spec-3.25.ebuild,
+  File-Spec-3.27.01.ebuild, File-Spec-3.29.ebuild:
+  New virtuals: ExtUtils-CBuilder module-build
 
 *File-Spec-3.29 (31 Oct 2008)
 *File-Spec-3.27.01 (31 Oct 2008)
